// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSummaryPipelineTemplate generates pipeline for SLO with calendar aligned time window 1`] = `
Object {
  "_meta": Object {
    "description": "Ingest pipeline for SLO summary data [id: test-slo-calendar, revision: 1]",
    "managed": true,
    "managed_by": "observability",
    "version": 3.5,
  },
  "description": "Ingest pipeline for SLO summary data [id: test-slo-calendar, revision: 1]",
  "id": ".slo-observability.summary.pipeline-test-slo-calendar-1",
  "processors": Array [
    Object {
      "set": Object {
        "description": "Set errorBudgetEstimated field",
        "field": "errorBudgetEstimated",
        "value": true,
      },
    },
    Object {
      "set": Object {
        "description": "Set isTempDoc field",
        "field": "isTempDoc",
        "value": false,
      },
    },
    Object {
      "set": Object {
        "description": "Set groupBy field",
        "field": "slo.groupBy",
        "value": "*",
      },
    },
    Object {
      "set": Object {
        "description": "Set name field",
        "field": "slo.name",
        "value": "irrelevant",
      },
    },
    Object {
      "set": Object {
        "description": "Set description field",
        "field": "slo.description",
        "value": "irrelevant",
      },
    },
    Object {
      "set": Object {
        "description": "Set tags field",
        "field": "slo.tags",
        "value": Array [
          "critical",
          "k8s",
        ],
      },
    },
    Object {
      "set": Object {
        "description": "Set indicator.type field",
        "field": "slo.indicator.type",
        "value": "sli.apm.transactionDuration",
      },
    },
    Object {
      "set": Object {
        "description": "Set budgetingMethod field",
        "field": "slo.budgetingMethod",
        "value": "occurrences",
      },
    },
    Object {
      "set": Object {
        "description": "Set timeWindow.duration field",
        "field": "slo.timeWindow.duration",
        "value": "1w",
      },
    },
    Object {
      "set": Object {
        "description": "Set timeWindow.type field",
        "field": "slo.timeWindow.type",
        "value": "calendarAligned",
      },
    },
    Object {
      "set": Object {
        "description": "Set objective.target field",
        "field": "slo.objective.target",
        "value": 0.999,
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 0', set status to NO_DATA",
        "field": "status",
        "if": "ctx.statusCode == 0",
        "value": "NO_DATA",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 1', set statusLabel to VIOLATED",
        "field": "status",
        "if": "ctx.statusCode == 1",
        "value": "VIOLATED",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 2', set status to DEGRADING",
        "field": "status",
        "if": "ctx.statusCode == 2",
        "value": "DEGRADING",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 4', set status to HEALTHY",
        "field": "status",
        "if": "ctx.statusCode == 4",
        "value": "HEALTHY",
      },
    },
    Object {
      "set": Object {
        "field": "summaryUpdatedAt",
        "value": "{{{_ingest.timestamp}}}",
      },
    },
    Object {
      "set": Object {
        "field": "spaceId",
        "value": "default",
      },
    },
    Object {
      "set": Object {
        "description": "Store the indicator params",
        "field": "slo.indicator.params",
        "ignore_failure": true,
        "value": Object {
          "environment": "irrelevant",
          "index": "metrics-apm*",
          "service": "irrelevant",
          "threshold": 500,
          "transactionName": "irrelevant",
          "transactionType": "irrelevant",
        },
      },
    },
    Object {
      "set": Object {
        "field": "slo.createdAt",
        "value": 2025-12-02T19:03:45.702Z,
      },
    },
    Object {
      "set": Object {
        "field": "slo.updatedAt",
        "value": 2025-12-02T19:03:45.702Z,
      },
    },
    Object {
      "set": Object {
        "field": "kibanaUrl",
        "ignore_failure": true,
        "value": "https://my-kibana.com",
      },
    },
    Object {
      "script": Object {
        "description": "Computes the last five minute burn rate value",
        "lang": "painless",
        "params": Object {
          "isTimeslice": false,
          "totalSlicesInRange": 0,
        },
        "source": "def totalEvents = ctx[\\"fiveMinuteBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"fiveMinuteBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
      },
    },
    Object {
      "script": Object {
        "description": "Computes the last hour burn rate value",
        "lang": "painless",
        "params": Object {
          "isTimeslice": false,
          "totalSlicesInRange": 0,
        },
        "source": "def totalEvents = ctx[\\"oneHourBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"oneHourBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
      },
    },
    Object {
      "script": Object {
        "description": "Computes the last day burn rate value",
        "lang": "painless",
        "params": Object {
          "isTimeslice": false,
          "totalSlicesInRange": 0,
        },
        "source": "def totalEvents = ctx[\\"oneDayBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"oneDayBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
      },
    },
    Object {
      "set": Object {
        "field": "slo.updatedBy",
        "ignore_failure": true,
        "value": "irrelevant",
      },
    },
    Object {
      "set": Object {
        "field": "slo.createdBy",
        "ignore_failure": true,
        "value": "irrelevant",
      },
    },
    Object {
      "pipeline": Object {
        "description": "Global custom pipeline for all SLO summary data",
        "ignore_failure": true,
        "ignore_missing_pipeline": true,
        "name": "slo-summary-global@custom",
      },
    },
    Object {
      "pipeline": Object {
        "ignore_failure": true,
        "ignore_missing_pipeline": true,
        "name": "slo-summary-test-slo-calendar@custom",
      },
    },
  ],
}
`;

exports[`getSummaryPipelineTemplate generates pipeline for SLO with occurrences budgeting method 1`] = `
Object {
  "_meta": Object {
    "description": "Ingest pipeline for SLO summary data [id: test-slo, revision: 1]",
    "managed": true,
    "managed_by": "observability",
    "version": 3.5,
  },
  "description": "Ingest pipeline for SLO summary data [id: test-slo, revision: 1]",
  "id": ".slo-observability.summary.pipeline-test-slo-1",
  "processors": Array [
    Object {
      "set": Object {
        "description": "Set errorBudgetEstimated field",
        "field": "errorBudgetEstimated",
        "value": false,
      },
    },
    Object {
      "set": Object {
        "description": "Set isTempDoc field",
        "field": "isTempDoc",
        "value": false,
      },
    },
    Object {
      "set": Object {
        "description": "Set groupBy field",
        "field": "slo.groupBy",
        "value": "*",
      },
    },
    Object {
      "set": Object {
        "description": "Set name field",
        "field": "slo.name",
        "value": "irrelevant",
      },
    },
    Object {
      "set": Object {
        "description": "Set description field",
        "field": "slo.description",
        "value": "irrelevant",
      },
    },
    Object {
      "set": Object {
        "description": "Set tags field",
        "field": "slo.tags",
        "value": Array [
          "critical",
          "k8s",
        ],
      },
    },
    Object {
      "set": Object {
        "description": "Set indicator.type field",
        "field": "slo.indicator.type",
        "value": "sli.apm.transactionDuration",
      },
    },
    Object {
      "set": Object {
        "description": "Set budgetingMethod field",
        "field": "slo.budgetingMethod",
        "value": "occurrences",
      },
    },
    Object {
      "set": Object {
        "description": "Set timeWindow.duration field",
        "field": "slo.timeWindow.duration",
        "value": "7d",
      },
    },
    Object {
      "set": Object {
        "description": "Set timeWindow.type field",
        "field": "slo.timeWindow.type",
        "value": "rolling",
      },
    },
    Object {
      "set": Object {
        "description": "Set objective.target field",
        "field": "slo.objective.target",
        "value": 0.999,
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 0', set status to NO_DATA",
        "field": "status",
        "if": "ctx.statusCode == 0",
        "value": "NO_DATA",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 1', set statusLabel to VIOLATED",
        "field": "status",
        "if": "ctx.statusCode == 1",
        "value": "VIOLATED",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 2', set status to DEGRADING",
        "field": "status",
        "if": "ctx.statusCode == 2",
        "value": "DEGRADING",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 4', set status to HEALTHY",
        "field": "status",
        "if": "ctx.statusCode == 4",
        "value": "HEALTHY",
      },
    },
    Object {
      "set": Object {
        "field": "summaryUpdatedAt",
        "value": "{{{_ingest.timestamp}}}",
      },
    },
    Object {
      "set": Object {
        "field": "spaceId",
        "value": "default",
      },
    },
    Object {
      "set": Object {
        "description": "Store the indicator params",
        "field": "slo.indicator.params",
        "ignore_failure": true,
        "value": Object {
          "environment": "irrelevant",
          "index": "metrics-apm*",
          "service": "irrelevant",
          "threshold": 500,
          "transactionName": "irrelevant",
          "transactionType": "irrelevant",
        },
      },
    },
    Object {
      "set": Object {
        "field": "slo.createdAt",
        "value": 2025-12-02T19:03:45.698Z,
      },
    },
    Object {
      "set": Object {
        "field": "slo.updatedAt",
        "value": 2025-12-02T19:03:45.698Z,
      },
    },
    Object {
      "set": Object {
        "field": "kibanaUrl",
        "ignore_failure": true,
        "value": "https://my-kibana.com",
      },
    },
    Object {
      "script": Object {
        "description": "Computes the last five minute burn rate value",
        "lang": "painless",
        "params": Object {
          "isTimeslice": false,
          "totalSlicesInRange": 0,
        },
        "source": "def totalEvents = ctx[\\"fiveMinuteBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"fiveMinuteBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
      },
    },
    Object {
      "script": Object {
        "description": "Computes the last hour burn rate value",
        "lang": "painless",
        "params": Object {
          "isTimeslice": false,
          "totalSlicesInRange": 0,
        },
        "source": "def totalEvents = ctx[\\"oneHourBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"oneHourBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
      },
    },
    Object {
      "script": Object {
        "description": "Computes the last day burn rate value",
        "lang": "painless",
        "params": Object {
          "isTimeslice": false,
          "totalSlicesInRange": 0,
        },
        "source": "def totalEvents = ctx[\\"oneDayBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"oneDayBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
      },
    },
    Object {
      "set": Object {
        "field": "slo.updatedBy",
        "ignore_failure": true,
        "value": "irrelevant",
      },
    },
    Object {
      "set": Object {
        "field": "slo.createdBy",
        "ignore_failure": true,
        "value": "irrelevant",
      },
    },
    Object {
      "pipeline": Object {
        "description": "Global custom pipeline for all SLO summary data",
        "ignore_failure": true,
        "ignore_missing_pipeline": true,
        "name": "slo-summary-global@custom",
      },
    },
    Object {
      "pipeline": Object {
        "ignore_failure": true,
        "ignore_missing_pipeline": true,
        "name": "slo-summary-test-slo@custom",
      },
    },
  ],
}
`;

exports[`getSummaryPipelineTemplate generates pipeline for SLO with timeslices budgeting method 1`] = `
Object {
  "_meta": Object {
    "description": "Ingest pipeline for SLO summary data [id: test-slo-timeslices, revision: 1]",
    "managed": true,
    "managed_by": "observability",
    "version": 3.5,
  },
  "description": "Ingest pipeline for SLO summary data [id: test-slo-timeslices, revision: 1]",
  "id": ".slo-observability.summary.pipeline-test-slo-timeslices-1",
  "processors": Array [
    Object {
      "set": Object {
        "description": "Set errorBudgetEstimated field",
        "field": "errorBudgetEstimated",
        "value": false,
      },
    },
    Object {
      "set": Object {
        "description": "Set isTempDoc field",
        "field": "isTempDoc",
        "value": false,
      },
    },
    Object {
      "set": Object {
        "description": "Set groupBy field",
        "field": "slo.groupBy",
        "value": "*",
      },
    },
    Object {
      "set": Object {
        "description": "Set name field",
        "field": "slo.name",
        "value": "irrelevant",
      },
    },
    Object {
      "set": Object {
        "description": "Set description field",
        "field": "slo.description",
        "value": "irrelevant",
      },
    },
    Object {
      "set": Object {
        "description": "Set tags field",
        "field": "slo.tags",
        "value": Array [
          "critical",
          "k8s",
        ],
      },
    },
    Object {
      "set": Object {
        "description": "Set indicator.type field",
        "field": "slo.indicator.type",
        "value": "sli.apm.transactionDuration",
      },
    },
    Object {
      "set": Object {
        "description": "Set budgetingMethod field",
        "field": "slo.budgetingMethod",
        "value": "timeslices",
      },
    },
    Object {
      "set": Object {
        "description": "Set timeWindow.duration field",
        "field": "slo.timeWindow.duration",
        "value": "7d",
      },
    },
    Object {
      "set": Object {
        "description": "Set timeWindow.type field",
        "field": "slo.timeWindow.type",
        "value": "rolling",
      },
    },
    Object {
      "set": Object {
        "description": "Set objective.target field",
        "field": "slo.objective.target",
        "value": 0.98,
      },
    },
    Object {
      "set": Object {
        "description": "Set objective.timesliceTarget field",
        "field": "slo.objective.timesliceTarget",
        "value": 0.95,
      },
    },
    Object {
      "set": Object {
        "description": "Set objective.timesliceWindow field",
        "field": "slo.objective.timesliceWindow",
        "value": "2m",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 0', set status to NO_DATA",
        "field": "status",
        "if": "ctx.statusCode == 0",
        "value": "NO_DATA",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 1', set statusLabel to VIOLATED",
        "field": "status",
        "if": "ctx.statusCode == 1",
        "value": "VIOLATED",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 2', set status to DEGRADING",
        "field": "status",
        "if": "ctx.statusCode == 2",
        "value": "DEGRADING",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 4', set status to HEALTHY",
        "field": "status",
        "if": "ctx.statusCode == 4",
        "value": "HEALTHY",
      },
    },
    Object {
      "set": Object {
        "field": "summaryUpdatedAt",
        "value": "{{{_ingest.timestamp}}}",
      },
    },
    Object {
      "set": Object {
        "field": "spaceId",
        "value": "default",
      },
    },
    Object {
      "set": Object {
        "description": "Store the indicator params",
        "field": "slo.indicator.params",
        "ignore_failure": true,
        "value": Object {
          "environment": "irrelevant",
          "index": "metrics-apm*",
          "service": "irrelevant",
          "threshold": 500,
          "transactionName": "irrelevant",
          "transactionType": "irrelevant",
        },
      },
    },
    Object {
      "set": Object {
        "field": "slo.createdAt",
        "value": 2025-12-02T19:03:45.701Z,
      },
    },
    Object {
      "set": Object {
        "field": "slo.updatedAt",
        "value": 2025-12-02T19:03:45.701Z,
      },
    },
    Object {
      "set": Object {
        "field": "kibanaUrl",
        "ignore_failure": true,
        "value": "https://my-kibana.com",
      },
    },
    Object {
      "script": Object {
        "description": "Computes the last five minute burn rate value",
        "lang": "painless",
        "params": Object {
          "isTimeslice": true,
          "totalSlicesInRange": 2,
        },
        "source": "def totalEvents = ctx[\\"fiveMinuteBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"fiveMinuteBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
      },
    },
    Object {
      "script": Object {
        "description": "Computes the last hour burn rate value",
        "lang": "painless",
        "params": Object {
          "isTimeslice": true,
          "totalSlicesInRange": 30,
        },
        "source": "def totalEvents = ctx[\\"oneHourBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"oneHourBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
      },
    },
    Object {
      "script": Object {
        "description": "Computes the last day burn rate value",
        "lang": "painless",
        "params": Object {
          "isTimeslice": true,
          "totalSlicesInRange": 720,
        },
        "source": "def totalEvents = ctx[\\"oneDayBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"oneDayBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
      },
    },
    Object {
      "set": Object {
        "field": "slo.updatedBy",
        "ignore_failure": true,
        "value": "irrelevant",
      },
    },
    Object {
      "set": Object {
        "field": "slo.createdBy",
        "ignore_failure": true,
        "value": "irrelevant",
      },
    },
    Object {
      "pipeline": Object {
        "description": "Global custom pipeline for all SLO summary data",
        "ignore_failure": true,
        "ignore_missing_pipeline": true,
        "name": "slo-summary-global@custom",
      },
    },
    Object {
      "pipeline": Object {
        "ignore_failure": true,
        "ignore_missing_pipeline": true,
        "name": "slo-summary-test-slo-timeslices@custom",
      },
    },
  ],
}
`;

exports[`getSummaryPipelineTemplate handles missing publicBaseUrl 1`] = `
Object {
  "_meta": Object {
    "description": "Ingest pipeline for SLO summary data [id: test-slo-no-url, revision: 1]",
    "managed": true,
    "managed_by": "observability",
    "version": 3.5,
  },
  "description": "Ingest pipeline for SLO summary data [id: test-slo-no-url, revision: 1]",
  "id": ".slo-observability.summary.pipeline-test-slo-no-url-1",
  "processors": Array [
    Object {
      "set": Object {
        "description": "Set errorBudgetEstimated field",
        "field": "errorBudgetEstimated",
        "value": false,
      },
    },
    Object {
      "set": Object {
        "description": "Set isTempDoc field",
        "field": "isTempDoc",
        "value": false,
      },
    },
    Object {
      "set": Object {
        "description": "Set groupBy field",
        "field": "slo.groupBy",
        "value": "*",
      },
    },
    Object {
      "set": Object {
        "description": "Set name field",
        "field": "slo.name",
        "value": "irrelevant",
      },
    },
    Object {
      "set": Object {
        "description": "Set description field",
        "field": "slo.description",
        "value": "irrelevant",
      },
    },
    Object {
      "set": Object {
        "description": "Set tags field",
        "field": "slo.tags",
        "value": Array [
          "critical",
          "k8s",
        ],
      },
    },
    Object {
      "set": Object {
        "description": "Set indicator.type field",
        "field": "slo.indicator.type",
        "value": "sli.apm.transactionDuration",
      },
    },
    Object {
      "set": Object {
        "description": "Set budgetingMethod field",
        "field": "slo.budgetingMethod",
        "value": "occurrences",
      },
    },
    Object {
      "set": Object {
        "description": "Set timeWindow.duration field",
        "field": "slo.timeWindow.duration",
        "value": "7d",
      },
    },
    Object {
      "set": Object {
        "description": "Set timeWindow.type field",
        "field": "slo.timeWindow.type",
        "value": "rolling",
      },
    },
    Object {
      "set": Object {
        "description": "Set objective.target field",
        "field": "slo.objective.target",
        "value": 0.999,
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 0', set status to NO_DATA",
        "field": "status",
        "if": "ctx.statusCode == 0",
        "value": "NO_DATA",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 1', set statusLabel to VIOLATED",
        "field": "status",
        "if": "ctx.statusCode == 1",
        "value": "VIOLATED",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 2', set status to DEGRADING",
        "field": "status",
        "if": "ctx.statusCode == 2",
        "value": "DEGRADING",
      },
    },
    Object {
      "set": Object {
        "description": "if 'statusCode == 4', set status to HEALTHY",
        "field": "status",
        "if": "ctx.statusCode == 4",
        "value": "HEALTHY",
      },
    },
    Object {
      "set": Object {
        "field": "summaryUpdatedAt",
        "value": "{{{_ingest.timestamp}}}",
      },
    },
    Object {
      "set": Object {
        "field": "spaceId",
        "value": "default",
      },
    },
    Object {
      "set": Object {
        "description": "Store the indicator params",
        "field": "slo.indicator.params",
        "ignore_failure": true,
        "value": Object {
          "environment": "irrelevant",
          "index": "metrics-apm*",
          "service": "irrelevant",
          "threshold": 500,
          "transactionName": "irrelevant",
          "transactionType": "irrelevant",
        },
      },
    },
    Object {
      "set": Object {
        "field": "slo.createdAt",
        "value": 2025-12-02T19:03:45.703Z,
      },
    },
    Object {
      "set": Object {
        "field": "slo.updatedAt",
        "value": 2025-12-02T19:03:45.703Z,
      },
    },
    Object {
      "set": Object {
        "field": "kibanaUrl",
        "ignore_failure": true,
        "value": "",
      },
    },
    Object {
      "script": Object {
        "description": "Computes the last five minute burn rate value",
        "lang": "painless",
        "params": Object {
          "isTimeslice": false,
          "totalSlicesInRange": 0,
        },
        "source": "def totalEvents = ctx[\\"fiveMinuteBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"fiveMinuteBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
      },
    },
    Object {
      "script": Object {
        "description": "Computes the last hour burn rate value",
        "lang": "painless",
        "params": Object {
          "isTimeslice": false,
          "totalSlicesInRange": 0,
        },
        "source": "def totalEvents = ctx[\\"oneHourBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"oneHourBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
      },
    },
    Object {
      "script": Object {
        "description": "Computes the last day burn rate value",
        "lang": "painless",
        "params": Object {
          "isTimeslice": false,
          "totalSlicesInRange": 0,
        },
        "source": "def totalEvents = ctx[\\"oneDayBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"oneDayBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
      },
    },
    Object {
      "set": Object {
        "field": "slo.updatedBy",
        "ignore_failure": true,
        "value": "irrelevant",
      },
    },
    Object {
      "set": Object {
        "field": "slo.createdBy",
        "ignore_failure": true,
        "value": "irrelevant",
      },
    },
    Object {
      "pipeline": Object {
        "description": "Global custom pipeline for all SLO summary data",
        "ignore_failure": true,
        "ignore_missing_pipeline": true,
        "name": "slo-summary-global@custom",
      },
    },
    Object {
      "pipeline": Object {
        "ignore_failure": true,
        "ignore_missing_pipeline": true,
        "name": "slo-summary-test-slo-no-url@custom",
      },
    },
  ],
}
`;
